Commented out the route match. Fixed the scroll being disabled due to overflow:hidden applying to all bodies

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,5 +1,5 @@
 @media screen and (min-width: 1024px) {
-  html, body{overflow:hidden;
+  html, body{
     height:"100vh";}
 }
   .greeting {
